--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="card card1">
                 <div class="card-body">
                     <div class="col-12 text-center">
-                        <input type="text" placeholder="enter city name "  class="form-control-lg"id="city" style="margin-top:150px;">
+                        <input type="text" placeholder="enter city name "id="city" style="margin-top:150px;">
                     </div>
                 </div>
                 <div class="col-12 text-center" style="margin-bottom: 20px;padding: 20px;">
