--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 
     <div class="container-fluid">
         <div class="section1">
-        <h1 class="text-center">WEATHER DETECTOR</h1>
-        <div class="row">
-            <div class="card card1">
-                <div class="card-body">
-                    <div class="col-12 text-center">
-                        <input type="text" placeholder="enter city name "id="city" style="margin-top:150px;">
-                    </div>
+            <h1 class="text-center">WEATHER DETECTOR</h1>
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-12 text-center">
+
+
+                    <input type="text" placeholder="enter city name " id="city" style="margin-top:150px;">
                 </div>
+
                 <div class="col-12 text-center" style="margin-bottom: 20px;padding: 20px;">
                     <button class="btn btn-outline-primary btn1" onclick="fetchWeather()"><i
                             class="fas fa-search-minus"></i>search</button>
