--- a/index.html
+++ b/index.html
@@ -16,28 +16,28 @@
 
 <body>
 
-    <div class="container-fluid">
-        <div class="section1">
-            <h1 class="text-center">WEATHER DETECTOR</h1>
-            <div class="row">
-                <div class="col-lg-12 col-md-12 col-12 text-center">
+    <div class="container-fluid mt-5 section1">
+
+        <h1 class="text-center"><i class="fas fa-cloud">WEATHER DETECTOR</i></h1>
+        <div class="row ">
+            <div class="col-lg-12 col-md-12 col-12 text-center">
 
 
-                    <input type="text" placeholder="enter city name " id="city" style="margin-top:150px;">
-                </div>
-
-                <div class="col-12 text-center" style="margin-bottom: 20px;padding: 20px;">
-                    <button class="btn btn-outline-primary btn1" onclick="fetchWeather()"><i
-                            class="fas fa-search-minus"></i>search</button>
-                    <button class="btn btn-outline-warning btn2" onclick="resetButton()">reset</button>
-                </div>
-
-
+                <input type="text" placeholder="enter city name " id="city" class="form-control-lg"
+                    style="margin-top:150px;">
             </div>
+
+            <div class="col-12 text-center" style="margin-bottom: 20px;padding: 20px;">
+                <button class="btn btn-outline-primary btn1" onclick="fetchWeather()"><i
+                        class="fas fa-search-minus"></i>search</button>
+                <button class="btn btn-outline-warning btn2" onclick="resetButton()">reset</button>
+            </div>
+
+
         </div>
     </div>
     </div>
-    <div class="container-fluid section2">
+    <div class="container-fluid">
         <div class="row" id="result">
 
         </div>
